css/style.css
body {
	overflow: auto;
	font-family: 'Century Gothic', sans-serif;
	background-image: url(../img/geometry.jpg);
}

#photoBooth {
	margin-top: .2em;
	padding: 10px;
	width: 650px;
	margin-left: auto;
	margin-right: auto;
	background-color: white;
	border-radius: 2px;
}	

#slideShow {	
	position: relative;
}

.photoHolder {
	position: relative;
	width: 80%;
	margin: 0 auto;
}

.moreIndicator {
	height: 50px;
	width: 50px;
	position: absolute;
	z-index: 3;
	opacity: .8;
	bottom: 60px;
	left: 300px;
}

.thumbnail {
	position: relative;
	box-shadow: 1px 3px 20px 0px;
}


.banner {
	text-align: center;
	font-size: 1.25em;
}

#nav {
	clear: both;
	position: relative;
}

#prevPhoto {
	height: 42px;
	width: 42px;
}

#nextPhoto {
	height: 42px;
	width: 42px;
}

.details p {
	margin-top: 20px;
}
.details {
	border: 1px #000 dashed;
	padding: 0px 10px;
	margin: 20px 0px;
}

/*Add CSS styles to rotate the element 90deg
Make it animate nicely. You'll need CSS3 for this*/
.rot90 {
	-webkit-transform: rotate(90deg);
    -moz-transform: rotate(90deg);
    -o-transform: rotate(90deg);
    -ms-transform: rotate(90deg);
    transform: rotate(90deg);
    /* Firefox */
	-moz-transition: all 1s ease;
	/* WebKit */
	-webkit-transition: all 1s ease;
	/* Opera */
	-o-transition: all 1s ease;
	/* Standard */
	transition: all 1s ease;
	}

/*Add CSS styles to rotate the element 180deg
Make it animate nicely. You'll need CSS3 for this*/
.rot180 {}

/*Add CSS styles to rotate the element 270deg
Make it animate nicely. You'll need CSS3 for this*/
.rot270 {
	-webkit-transform: rotate(270deg);
    -moz-transform: rotate(270deg);
    -o-transform: rotate(270deg);
    -ms-transform: rotate(270deg);
    transform: rotate(270deg);
    /* Firefox */
	-moz-transition: all 1s ease;
	/* WebKit */
	-webkit-transition: all 1s ease;
	/* Opera */
	-o-transition: all 1s ease;
	/* Standard */
	transition: all 1s ease;
	}
}

